nvidia_gpu_stats/vendor/darling/tests/compile-fail/default_expr_wrong_type.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/default_expr_wrong_type.rs:5:25
  |
5 |     #[darling(default = "usize::default")]
  |                         ^^^^^^^^^^^^^^^^- help: try using a conversion method: `.to_string()`
  |                         |
  |                         expected `String`, found `usize`

error[E0308]: mismatched types
 --> tests/compile-fail/default_expr_wrong_type.rs:8:35
  |
8 |     #[darling(multiple, default = "usize::default")]
  |                                   ^^^^^^^^^^^^^^^^ expected `Vec<String>`, found `usize`
  |
  = note: expected struct `Vec<String>`
               found type `usize`
